# src/SluiceBase.Api/Endpoints/EndpointMapper.cs
@@ -2,11 +2,18 @@ namespace SluiceBase.Api.Endpoints;
 
 internal static class EndpointMapper
 {
-    public static IEndpointRouteBuilder MapAllEndpoints(this IEndpointRouteBuilder app)
+    public static IEndpointRouteBuilder MapAllEndpoints(this WebApplication app)
     {
         AuthEndpoints.Map(app);
         HealthEndpoints.Map(app);
         PermissionEndpoints.Map(app);
+        ServerEndpoints.Map(app);
+
+        if (app.Environment.IsDevelopment())
+        {
+            DevelopmentEndpoints.Map(app);
+        }
+
         return app;
     }
 }
